Adiciona README.md e implementação de deletar filmes.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+li {
+  margin-bottom: 10px;
+}
+
+.delete-btn {
+  color: red;
+  text-decoration: none;
+}
+
+.delete-btn:hover {
+  color: brown;
+}
